--- a/recipe/vinca.yaml
+++ b/recipe/vinca.yaml
@@ -35,8 +35,10 @@ packages_skip_by_deps:
   - angles
   - geometry
   - geometry2
+  - laser_geometry
 
 packages_select_by_deps:
-  - laser_geometry
+  - map_msgs
+  - move_base_msgs
 
 patch_dir: patch
